<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="android.revesz.seriestracker_v2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_allseries"
        android:name="android.revesz.seriestracker_v2.ui.allseries.AllSeriesFragment"
        android:label="@string/menu_allseries"
        tools:layout="@layout/fragment_allseries" >
        <action
            android:id="@+id/action_nav_allseries_to_showDetailsFragment"
            app:destination="@id/showDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="android.revesz.seriestracker_v2.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="android.revesz.seriestracker_v2.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="android.revesz.seriestracker_v2.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="android.revesz.seriestracker_v2.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/showDetailsFragment"
        android:name="android.revesz.seriestracker_v2.ShowDetailsFragment"
        android:label="ShowDetailsFragment" >
        <argument
            android:name="showId"
            app:argType="integer" />
    </fragment>
</navigation>